# TicTacToe

./: .gitignore  LICENSE  MAKEFILE  README.md  pyproject.toml
TicTacToe/: configs.json  main.py  pyproject.toml
TicTacToe/core/: __init__.py  game.py  screen.py
TicTacToe/core/configs/: __init__.py  configs.py
TicTacToe/core/logic/: __init__.py  logic.py
TicTacToe/tictactoe/: game.py  main.py
TicTacToe/tictactoe/configs/: configs.json  configs.py
TicTacToe/tictactoe/core/: screen.py
TicTacToe/tictactoe/core/logic/: game_logic.py
