[tool.poetry]
name = "TicTacToe"
version = "1.0.0"
description = "Tictactoe with PyGame's lib"
authors = ["Fabrício Dos Santos Moreira"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pygame = "2.6.1"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 140
target-version = ['py310']

[tool.isort]
profile = "black"
